# buchcard

./: .gitignore  dev.bat  index.html  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: categorizer.rs  commands.rs  credit.rs  db.rs  gazprombank_pdf.rs  importer.rs  lib.rs  main.rs  normalizer.rs  pdf_parser.rs
src/components/: ChatPanel.tsx  SettingsPanel.tsx
src/components/dashboard/: CashForecast.tsx  Charts.tsx  CreditsWidget.tsx  GoalsWidget.tsx  KpiCards.tsx  MonthCompare.tsx  PlanningBlock.tsx  TransactionTable.tsx
src/components/ui/: badge.tsx  button.tsx  date-range-picker.tsx  progress.tsx  select.tsx
src/components/wizard/: ImportWizard.tsx
src/lib/: chats.ts  paidModels.ts  theme.tsx  types.ts  utils.ts
