[package]
name = "buchcard"
version = "0.1.0"
description = "Buchcard expense tracker"
authors = []
edition = "2021"
rust-version = "1.85"

[lib]
name = "buchcard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "buchcard"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
calamine = "0.24"
reqwest = { version = "0.11", features = ["json", "blocking", "stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
regex = "1"
sha1 = "0.10"
hex = "0.4"
strsim = "0.11"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs-next = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
